[package]
name = "mongo-signup"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.12"
bson = "2.6.1"
mongodb = "2.4.0"
once_cell = "1.17.1"
serde = {version = "1.0.158", features = ["derive"]}
tokio = {version = "1.26.0", features = ["rt-multi-thread", "macros",] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
